# mega_meem

./: .env.example  .gitignore  Dockerfile  LICENSE  pyproject.toml
app/: bench_store.py  claude_client.py  config.py  db.py  dependencies.py  gemini_client.py  main.py  ollama_client.py  protocols.py  schemas.py  trace_store.py
benchmarks/: run.py
benchmarks/conversations/: life_coach_baseline.json
benchmarks/eval/: life_coach_baseline_eval.json
docs/: plan.md
tests/: conftest.py  test_admin.py  test_archive.py  test_chat.py  test_history.py  test_sessions.py  test_traces.py
web/: package-lock.json
web/src/app/: layout.tsx  page.tsx
web/src/app/eval/: layout.tsx  page.tsx
web/src/app/eval/analytics/: page.tsx
web/src/app/eval/bench/: page.tsx
web/src/app/eval/bench/[id]/: page.tsx
web/src/app/eval/compare/: page.tsx
web/src/app/eval/traces/: page.tsx
web/src/app/history/: page.tsx
web/src/components/: app-shell.tsx  chat.tsx  loading-indicator.tsx  message-input.tsx  message.tsx  nav.tsx  new-session-dialog.tsx  rating.tsx  trace-card.tsx
web/src/lib/: api.ts  types.ts
